--- a/amazonprimeclone/src/footer/footer.css
+++ b/amazonprimeclone/src/footer/footer.css
@@ -1,10 +1,10 @@
 
 
 .footer-container{
+    width: 100%;
 text-align: center;
 font-size: 13px;
 margin: 30px;
-
 }
 .footer-list{
     display: flex;
@@ -13,7 +13,6 @@ margin: 30px;
     justify-content: center;
     
     }
-   
     .footer-item{
     margin: 0 1rem;  
 }
