--- a/amazonprimeclone/src/App.css
+++ b/amazonprimeclone/src/App.css
@@ -28,3 +28,23 @@
   color: #61dafb;
 }
 
+
+
+.arrow {
+  position: absolute;
+  color: #000000;
+  font-size: 2.5em;
+  font-weight: bold;
+
+  cursor: pointer;
+}
+
+.nextArrow {
+  top: 0;
+  right: -10px;
+}
+
+.prevArrow {
+  top: 0;
+  left: -10px;
+}
