--- a/amazonprimeclone/src/components/carousel/carousel.css
+++ b/amazonprimeclone/src/components/carousel/carousel.css
@@ -56,11 +56,7 @@
     opacity: 0.5;
     
 }
-.active{
-    font-size: 2em;
-    padding: 1rem ;
-    opacity: 1;
-}
+
 
 
 /*
@@ -94,3 +90,108 @@ react-slick
     }
   
 */
+
+/*
+.slick-prev {
+    left: -52px !important;
+  }
+  
+  .slick-next:before,
+  .slick-prev:before {
+    content: "" !important;
+  }
+  .next-slick-arrow,
+  .prev-slick-arrow {
+    color: #000000;
+    font-size: 48px;
+      }
+
+      */
+
+
+     
+.App {
+    font-family: sans-serif;
+    padding: 10px 50px;
+  }
+  
+  /*.App > div {
+    background-color: #fff;
+    color: #3498db;
+    text-align: center;
+  }
+  */
+  
+  .arrow {
+    position: absolute;
+    color:white;
+    font-size: 4.2em;
+    cursor: pointer;
+    font-weight: lighter;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  .nextArrow {
+    top: 35%;
+    right: 10px;
+  }
+  
+  .prevArrow {
+    top: 35%;
+    left: 10px;
+    z-index: 1;
+
+  }
+  
+      
+  @media screen and (max-width:1000) and (min-width:950){
+    .nextArrow {
+        top: 30%;
+      }
+      .prevArrow {
+        top: 30%
+      }
+  }
+  @media screen and (max-width:949) and (min-width:850){
+    .nextArrow {
+        top: 25%;
+      }
+      .prevArrow {
+        top: 25%
+      }
+  }
+
+  @media screen and (max-width:849){
+     
+    .arrow {
+        font-size: 1em;
+      }
+    .nextArrow {
+        top:0;
+      }
+      .prevArrow {
+        top:0;
+      }
+     
+  }
+
+  
+ .dot{
+    height: 10px;
+    width: 10px;
+    background-color:white;
+    border-radius: 50%;
+    opacity: 0.3;
+ }
+ 
+
+ .active{
+     opacity: 1;
+ }
+ .hide{
+     display: none;
+ }
+ .slick-dots{
+     left:-2%;
+     top:90%;
+ }
