--- a/amazonprimeclone/src/container/cardContainer.css
+++ b/amazonprimeclone/src/container/cardContainer.css
@@ -67,4 +67,16 @@
     display: flex;
   }
 
-  
+  @media screen and (max-width: 953px) and (min-width: 869px) {
+    .cardTitle{
+      margin-top: 60px;
+      margin-bottom: 4px;
+      display: flex;
+    }  }
+    @media screen and (max-width: 680px) and (min-width: 495px) {
+      .cardTitle{
+        margin-top: 120px;
+        margin-bottom: 0px;
+      }  }
+
+    
