--- a/amazonprimeclone/src/container/header.css
+++ b/amazonprimeclone/src/container/header.css
@@ -1,6 +1,6 @@
 
 .header{
-   
+padding: 12px 15px;
 }
 .navlistctnr{
     display: flex;
@@ -9,6 +9,7 @@
 .navlist{
     display: flex;
     flex-basis: 80%;
+    
 }
 .pro-list{
     color: white;
@@ -45,10 +46,12 @@ opacity: 1;
     flex-basis: 80%;
 }
 .listItem{
-    font-size:1.2em;
-font-weight:;
+    font-size:1em;
+font-weight:bold;
 margin:10px;
 color:white;
+opacity: 0.7;
+padding-bottom: 10px;
 
 }
 .search-box{
@@ -97,8 +100,34 @@ border-bottom:1px solid;
     .search-box{
         width: 70px;
     }
+    
 }
 
 .listItem{
     color: white;
+}
+
+@media screen and (max-width: 472px){
+    .search-box{
+        width: 60px;
+    }
+    .brse-item,.proName,logotext{
+        font-size: small;
+    }
+    .proName{
+        display: none;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .drpdwndown{
+        margin:0;
+        margin-top: 20px;
+    }
+}
+
+.activenavtitle{
+    text-decoration: underline;
+    text-underline-position: under;
+    color: white;
+    opacity: 1;
 }
